# test-project

./: aray.py  arry_csv.py  contact1.py  devbox.json  main.py  matrix.py  min.py  minmax.py  pyproject.toml  replace.py  ruff.toml  tabe.py  tamrin_1.py  time.py
config/config/: settings.py  urls.py
config/message/: urls.py  views.py
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  poll_views.py  tests.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_choice_description.py  0002_remove_choice_choice_text_remove_choice_question_and_more.py  0003_poll_question_description_alter_choice_description_and_more.py  0004_poll_questions.py  0005_alter_choice_choice_text_remove_poll_questions_and_more.py  0006_alter_poll_questions.py
mysite/polls/templates/polls/: add_question.html  add_question_nasim.html  add_with_choice.html  base.html  delete_question.html  detail.html  index.html  list_question.html  read_question.html  results.html  update_question.html
mysite/polls/templates/polls/poll/: creat_poll.html  create_poll.html  delete_poll.html  list_poll.html  update_poll.html
mysite/templates/: hello.html  home.html
mysite/templates/admin/: base_site.html
tamrin_1/: arry-csv.py  class.py  contact.html  contact.py  output.csv  tamrin_1.py  txt.py
template/: base.html  home.html
