[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["nasimm <nasiim.sem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
ruff = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
